--- a/apply.html
+++ b/apply.html
@@ -58,8 +58,7 @@
 				</select>
 
 				<label for="postcode">Postcode</label>
-				<input type="text" id="postcode" name="postcode" placeholder="3122" required minlength="4"
-					maxlength="4" />
+				<input type="text" id="postcode" name="postcode" placeholder="3122" required pattern="\d{4}" maxlength="4">
 
 				<label for="email">Email</label>
 				<input type="email" id="email" name="email" placeholder="johndoe@example.com" />
@@ -93,5 +92,4 @@
 			</form>
 			</main>
 </body>
-
 </html>
