fix phone number validation

--- a/apply.html
+++ b/apply.html
@@ -64,8 +64,7 @@
 				<input type="email" id="email" name="email" placeholder="johndoe@example.com" />
 
 				<label for="phone">Phone Number</label>
-				<input type="tel" id="phone" name="phone" placeholder="0412345678" required minlength="10"
-					maxlength="10" />
+				<input type="tel" id="phone" name="phone" placeholder="0412345678" minlength="8" maxlength="12" required/>
 
 				<fieldset>
 					<legend>Your Skills</legend>
