--- a/apply.html
+++ b/apply.html
@@ -1,62 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Apply for our jobs</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no">
-		<meta name="description" content="Apply to our open positions">
-		<link rel="stylesheet" type="text/css" href="styles/style.css">
-	</head>
-	<body>
-		<h1>Apply for your dream job</h1>
-		<h4>Fill out the form below to apply for one of our open positions!</h4>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="description" content="Apply to our open positions" />
+    <link rel="stylesheet" type="text/css" href="styles/style.css" />
+    <title>Apply for our jobs</title>
+  </head>
+  <body>
+    <h1>Apply for your dream job</h1>
+    <h4>Fill out the form below to apply for one of our open positions!</h4>
 
-		<!-- Job Application form, sends a POST request to the Swinburne Mercury server upon submission -->
-		<form method="post">
-			<label for="job_ref_no">Job Reference Number</label>
-			<input type="text" id="job_ref_no" placeholder="a1234" required minlength="5" maxlength="5">
+    <!-- Job Application form, sends a POST request to the Swinburne Mercury server upon submission -->
+    <form method="post">
+      <label for="job_ref_no">Job Reference Number</label>
+      <input
+        type="text"
+        id="job_ref_no"
+        placeholder="a1234"
+        required
+        minlength="5"
+        maxlength="5"
+      />
 
-			<section>
-			<label for="first_name">First Name</label>
-			<input type="text" id="first_name" placeholder="John" required maxlength="20">
+      <section>
+        <label for="first_name">First Name</label>
+        <input
+          type="text"
+          id="first_name"
+          placeholder="John"
+          required
+          maxlength="20"
+        />
 
-			<label for="last_name">Last Name</label>
-			<input type="text" id="last_name" placeholder="Doe" required maxlength="20">
-			</section>
+        <label for="last_name">Last Name</label>
+        <input
+          type="text"
+          id="last_name"
+          placeholder="Doe"
+          required
+          maxlength="20"
+        />
+      </section>
 
-			<label for="birth_date">Date of Birth</label>
-			<input type="date" id="birth_date" required>
+      <label for="birth_date">Date of Birth</label>
+      <input type="date" id="birth_date" required />
 
-			<p>Gender</p>
-			<input type="radio" id="gender_male" name="gender" value="male">
-			<label for="gender_male">Male</label><br>
-			<input type="radio" id="gender_female" name="gender" value="female">
-			<label for="gender_female">Female</label><br>
-			<input type="radio" id="gender_other" name="gender" value="other">
-			<label for="gender_other">Other</label>
+      <p>Gender</p>
+      <input type="radio" id="gender_male" name="gender" value="male" />
+      <label for="gender_male">Male</label><br />
+      <input type="radio" id="gender_female" name="gender" value="female" />
+      <label for="gender_female">Female</label><br />
+      <input type="radio" id="gender_other" name="gender" value="other" />
+      <label for="gender_other">Other</label>
 
-			<label for="address">Street Address</label>
-			<input type="text" id="address" placeholder="1 John St" required maxlength="40">
+      <label for="address">Street Address</label>
+      <input
+        type="text"
+        id="address"
+        placeholder="1 John St"
+        required
+        maxlength="40"
+      />
 
-			<label for="suburb">Suburb/Town</label>
-			<input type="text" id="suburb" placeholder="Hawthorn" required maxlength="40">
+      <label for="suburb">Suburb/Town</label>
+      <input
+        type="text"
+        id="suburb"
+        placeholder="Hawthorn"
+        required
+        maxlength="40"
+      />
 
-			<label for="state">State</label>
-			<select name="state" id="state">
-			<option value="vic">VIC</option>
-			<option value="nsw">NSW</option>
-			<option value="qld">QLD</option>
-			<option value="nt">NT</option>
-			<option value="wa">WA</option>
-			<option value="sa">SA</option>
-			<option value="tas">TAS</option>
-			<option value="act">ACT</option>
-			</select>
+      <label for="state">State</label>
+      <select name="state" id="state">
+        <option value="vic">VIC</option>
+        <option value="nsw">NSW</option>
+        <option value="qld">QLD</option>
+        <option value="nt">NT</option>
+        <option value="wa">WA</option>
+        <option value="sa">SA</option>
+        <option value="tas">TAS</option>
+        <option value="act">ACT</option>
+      </select>
 
-			<label for="postcode">Postcode</label>
-			<input type="text" id="postcode" placeholder="3122" required minlength="4" maxlength="4">
+      <label for="postcode">Postcode</label>
+      <input
+        type="text"
+        id="postcode"
+        placeholder="3122"
+        required
+        minlength="4"
+        maxlength="4"
+      />
 
-			<input type="submit" value="Apply">
-		</form>
-	</body>
+      <input type="submit" value="Apply" />
+    </form>
+  </body>
 </html>
