--- a/apply.html
+++ b/apply.html
@@ -10,8 +10,7 @@
   <body>
 	<main>
     <h1>Apply for your dream job</h1>
-    <h4>Fill out the form below to apply for one of our open positions!</h4>
-
+    <h3 class="unbold">Fill out the form below to apply for one of our open positions!</h3>
 			<!-- Job Application form, sends a POST request to the Swinburne Mercury server upon submission -->
 			<form method="post" action="https://mercury.swin.edu.au/it000000/formtest.php">
 				<label for="job_ref_no">Job Reference Number</label>
@@ -83,7 +82,6 @@
 				<textarea id="other_skills" name="other_skills" rows="4" cols="30"
 					placeholder="If you have any other skills not listed above, please list them here.">
 				</textarea>
-
 				<input type="submit" value="Apply">
 			</form>
 			</main>
