make checkbox required and fix margins

--- a/apply.html
+++ b/apply.html
@@ -65,7 +65,7 @@
 
 				<fieldset>
 					<legend>Your Skills</legend>
-					<input type="checkbox" id="skill1" name="skills" value="leadership">
+					<input type="checkbox" id="skill1" name="skills" value="leadership" required>
 					<label for="skill1">Leadership</label><br>
 					<input type="checkbox" id="skill2" name="skills" value="communication">
 					<label for="skill2">Communication</label><br>
