--- a/about.html
+++ b/about.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>About Us!</title>
+
+    <div class="container">
+      <h1>ABOUT US</h1>
+      <div class="about-text">
+        <p>
+          "Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
+          ab illo inventore veritatis et quasi architecto beatae vitae dicta
+          sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
+          qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+          quia non numquam eius modi tempora incidunt ut labore et dolore magnam
+          aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
+          exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
+          ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
+          ea voluptate velit esse quam nihil molestiae consequatur, vel illum
+          qui dolorem eum fugiat quo voluptas nulla pariatur?"
+        </p>
+      </div>
+    </div>
   </head>
   <body>
-    <h1>Hello this is about.html</h1>
+    <div class="container">
+      <h2>OUR MEMBERS!</h2>
+      <div class="member-grid-row">
+        <img src="./images/messi.png" alt="messi" />
+        <img src="./images/messi.png" alt="messi" />
+        <img src="./images/messi.png" alt="messi" />
+        <img src="./images/messi.png" alt="messi" />
+        <img src="./images/messi.png" alt="messi" />
+      </div>
+    </div>
   </body>
 </html>
