Adding Finished about.html, Modified style.css and a backup.css file for backing up unnecessary styles

--- a/about.html
+++ b/about.html
@@ -1,43 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  <head class="about-head">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- CSS -->
     <link rel="stylesheet" href="./styles/style.css" />
+    <!-- AWESOME FONTS -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    />
     <title>About Us!</title>
 
-    <div class="container">
+    <!-- <div class="container">
       <h1>ABOUT US</h1>
-      <div class="about-text">
-        <p>
-          "Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-          accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae
-          ab illo inventore veritatis et quasi architecto beatae vitae dicta
-          sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-          aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos
-          qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-          dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
-          quia non numquam eius modi tempora incidunt ut labore et dolore magnam
-          aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
-          exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex
-          ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in
-          ea voluptate velit esse quam nihil molestiae consequatur, vel illum
-          qui dolorem eum fugiat quo voluptas nulla pariatur?"
-        </p>
-      </div>
+      <div class="about-text"></div> -->
     </div>
   </head>
-  <body>
-    <div class="container">
-      <h2>OUR MEMBERS!</h2>
-      <div class="member-grid-row">
-        <img src="./images/messi.png" alt="messi" />
-        <img src="./images/messi.png" alt="messi" />
-        <img src="./images/messi.png" alt="messi" />
-        <img src="./images/messi.png" alt="messi" />
-        <img src="./images/messi.png" alt="messi" />
+  <body class="about-body">
+    <section>
+      <div class="row">
+        <h1>Our Members!</h1>
       </div>
-    </div>
+      <div class="row">
+        <!-- COL 1 -->
+        <div class="column">
+          <div class="card">
+            <div class="image-container">
+              <img
+                src="./images/messi.png"
+                alt="member one"
+                width="140"
+                height="128"
+              />
+            </div>
+            <h3>Messi Crying</h3>
+            <p>Captain</p>
+            <div class="icons">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-discord"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- COL 2 -->
+        <div class="column">
+          <div class="card">
+            <div class="image-container">
+              <img
+                src="./images/messi.png"
+                alt="member one"
+                width="140"
+                height="128"
+              />
+            </div>
+            <h3>Messi Crying</h3>
+            <p>Captain</p>
+            <div class="icons">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-discord"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- COL 3 -->
+        <div class="column">
+          <div class="card">
+            <div class="image-container">
+              <img
+                src="./images/messi.png"
+                alt="member one"
+                width="140"
+                height="128"
+              />
+            </div>
+            <h3>Messi Crying</h3>
+            <p>Captain</p>
+            <div class="icons">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-discord"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- COL 4 -->
+        <div class="column">
+          <div class="card">
+            <div class="image-container">
+              <img
+                src="./images/messi.png"
+                alt="member one"
+                width="140"
+                height="128"
+              />
+            </div>
+            <h3>Messi Crying</h3>
+            <p>Captain</p>
+            <div class="icons">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-discord"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- COL 5 -->
+        <div class="column">
+          <div class="card">
+            <div class="image-container">
+              <img
+                src="./images/messi.png"
+                alt="member one"
+                width="140"
+                height="128"
+              />
+            </div>
+            <h3>Messi Crying</h3>
+            <p>Captain</p>
+            <div class="icons">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-discord"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <!-- COL 6 -->
+        <div class="column">
+          <div class="card">
+            <div class="image-container">
+              <img
+                src="./images/messi.png"
+                alt="member one"
+                width="140"
+                height="128"
+              />
+            </div>
+            <h3>Messi Crying</h3>
+            <p>Captain</p>
+            <div class="icons">
+              <a href="#">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-github"></i>
+              </a>
+              <a href="#">
+                <i class="fab fa-discord"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
+
+  <footer>
+    Made By Simon Nguyen@2023
+  </footer>
 </html>
